# network

byteorder/: CMakeLists.txt  config.h
byteorder/intro/: byteorder.c  byteorder.h
client/: CMakeLists.txt
client/intro/: daytimetcpcli.c  daytimetcpcli.h  daytimetcpcliv6.c
client/lib/: error.c  error.h  readline.c  readline.h  readn.c  readn.h  sock_ntop.c  sock_ntop.h  unp.h  wrappthread.c  wrappthread.h  wrapsock.c  wrapsock.h  writen.c  writen.h
client/test/: readline1.c  readline1.h
server/: CMakeLists.txt  config.h
server/intro/: daytimetcpsrv.c  daytimetcpsrv.h
server/lib/: error.c  error.h  inet.c  inet.h  wrapconnect.c  wrapconnect.h  wrapsock.c  wrapsock.h
